# ane

./: .gitignore  CMakeLists.txt  FEATURE_REQUEST.md  LICENSE  README.md  dashboard.sh  mnist_demo.sh  probe.txt  run_build.sh  run_mnist_demo.sh
dashboards/: M4.html  M5.html  local_M5_results.html
docs/: API.md  ARM_dev_guide_matmul_f32.md  ARM_dev_guide_matmul_in8.md  DISCOVERY.md  INSTRUCTION_REFERENCE.md  TOOLS.md
experiments/: smopa_test.s  smopa_test.sh  test2.s  test3.s  test_sme2.s  test_stream.cpp
include/ane/: ane.hpp  sme_stream.hpp
include/ane/intrinsics/: common.hpp  lut.hpp  z_stream.hpp  z_vector.hpp
include/ane/streamexec/: bytecodes.hpp  compiler.hpp
include/ane/tiles/: concepts.hpp  lut.hpp  z_stream.hpp  z_tiles.hpp  z_vector.hpp
m4-sme-docs/: index.html
m4-sme-docs/scripts/: append_throughput.cjs  append_ui.cjs  parse_data.cjs  update_probe.cjs  update_probe.js  update_throughput.cjs
m4-sme-docs/src/: App.tsx  main.tsx
m4-sme-docs/src/data/: probe_results.json  throughput_results.json
probes/: probe.sh  probe_all_registers.sh  probe_instructions.sh  sme_instruction_list.txt
scripts/: download_mnist.py  mnist_pytorch_train_gpu.py
sme/: CMakeLists.txt
sme-ui/: .gitignore  README.md  package-lock.json  package.json
sme-ui/scripts/: update_mnist.cjs  update_probe.cjs  update_throughput.cjs
sme-ui/src/: App.tsx
sme-ui/src/data/: arm_docs.json  probe_results.json  throughput_results.json
src/: bytecode_interpreter.s  parser.cpp
src/ane/asm/: abs_fp32.s  add_bf16.s  add_fp32.s  and_u32.s  argmax_combine_fp32.s  argmax_fp32.s  bce_loss_backward_fp32.s  bce_loss_fp32.s  bf16_to_fp32.s  broadcast_kv_fp32.s  causal_mask_fp32.s  clamp_fp32.s  concat_fp32.s  conv2d_backward_input_fp32.s  conv2d_backward_weight_fp32.s  conv2d_fp32.s  copy_fp32.s  cross_attn_decode_cached_fp32.s  cross_attn_prefill_fp32.s  cross_entropy_loss_backward_fp32.s  cross_entropy_loss_fp32.s  dct4_fp32.s  dequantize_int4_fp32.s  dequantize_int8_fp32.s  div_fp32.s  dot_combine_fp32.s  dot_fp32.s  dropout_fp32.s  elu_backward_fp32.s  elu_fp32.s  exp_fp32.s  extract_below_u16.s  fill_fp32.s  flash_attn_decode_cached_fp32.s  flash_attn_prefill_causal_fp32.s  flash_attn_prefill_noncausal_fp32.s  fma_fp32.s  fp32_to_bf16.s  fp32_to_int32.s  fused_attn_layernorm_fp32.s  (+115 more)
src/ggml-backend/: ggml-ane.cpp  ggml-ane.h
tests/: CMakeLists.txt  TEST_PLAN.md  cblas_bench.c  core_test.c  run_full_throughput_tests.sh  test_activations.cpp  test_common.hpp  test_dsl_coverage.cpp  test_elementwise.cpp  test_losses.cpp  test_matmul.cpp  test_memory_ops.cpp  test_mnist.cpp  test_mnist_i8.cpp  test_new_ops.cpp  test_program_demo.cpp  test_reductions.cpp  test_remaining_ops.cpp  test_script.cpp  test_softmax.cpp  test_stream_exec.cpp  test_transformer.cpp
tests/throughput/: combined_int8.swift  int8_peak.metal  metal_int8_peak.swift  smopa_4way_kernel.s  triple_threat.swift
utils/: decode.py  get_sme2_hex.py
